Hid blank player score, fixed rating form bug
Hiding fa-star elements messed up BGA's form for rating games.
Also switched to returning lowest- rather than highest-indexed pieces from stacks.
This may help avoid tutorial annotations appearing under the pieces.

--- a/homeworlds.css
+++ b/homeworlds.css
@@ -563,15 +563,35 @@ https://www.kirupa.com/snippets/getting_jittery_on_hover_using_only_css.htm
     }
 }
 
-/* Modifications to main BGA display */
+/********************************
+Modifications to main BGA display
+********************************/
+
+/* Hide the dash that would be the player score in other games */
 .player_score_value{
     display:none
 }
-.fa-star{
+/*
+Hide the star that would be by the player score in other games
+WARNING: The BGA rating form also uses .fa-star,
+         so make sure the selector is more specific
+*/
+.player_score>.fa-star{
     display:none
 }
+/* Hide the dot that would separate the game score from the elo */
+.player_elo_wrap{
+    font-size:0px;
+}
+/* DON'T hide the children of the player_elo_wrap, like the elo score itself */
+.player_elo_wrap>*{
+    font-size:16px;
+}
+
+
 #HWfirst_player_indicator{
     font-size:75%;
+    margin-top:10px;
 }
 
 /* Turn token */
